--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
-/* app/globals.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Styles globaux personnalisés */
 body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
+  @apply font-sans m-0 p-0 bg-gray-50 text-gray-800;
 }
